2014-05-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync: Fixed URL of feed home.

2014-05-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (init_host_kb): Add "Hostname" and "Host-IP" KB entries
	for the host's name and IP address values.

2014-05-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/redis_config.txt: Added some more notes on using redis-cli.

2014-05-21  Henri Doreau <henri.doreau@gmail.com>

	* src/attack.c (KB_PATH_DEFAULT): Use definition from openvas-libraries.

2014-05-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* doc/openassd.8.in: Fix typo.

2014-05-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/redis_config.txt: Added a secion how to use redis-cli
	for analysis and debugging purposes.

2014-05-02  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (fill_host_kb_ssh_credentials): Don't fill publickey ssh
	kb entry.

2014-05-02  Henri Doreau <henri.doreau@gmail.com>

	* COPYING: Updated according to recent changes.

2014-04-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/example_redis_2_4.conf.in, doc/example_redis_2_6.conf.in: New.

	* INSTALL: Updated step 5 about redis to mention the above new examples.
	Also increased version of required openvas-libraries to 8.0.0.

	* CMakeLists.txt: Configure and install the two new example files.

2014-04-24  Henri Doreau <henri.doreau@gmail.com>

	* doc/redis_config.txt: Added information about how to configure redis
	to serve KBs.

2014-04-23  Henri Doreau <henri.doreau@gmail.com>

	* src/pluginlaunch.c (process_internal_msg): Remove dead code.

2014-04-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Increase dependency to openvas-libraries
	from 7.0.0 to 8.0.0.
	
2014-04-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post branch version bump.

	* CMakeLists.txt: Set to version to 5.0.0 and beta status.
